# kernel-shark-2.alpha

./: CMakeLists.txt  README
examples/: CMakeLists.txt  datafilter.c  dataload.c  dataplot.cpp  hello_kernel.c
src/: CMakeLists.txt  KsAdvFilteringDialog.cpp  KsAdvFilteringDialog.hpp  KsCaptureDialog.cpp  KsCaptureDialog.hpp  KsDualMarker.cpp  KsDualMarker.hpp  KsGLWidget.cpp  KsGLWidget.hpp  KsMainWindow.cpp  KsMainWindow.hpp  KsModels.cpp  KsModels.hpp  KsPlotTools.cpp  KsPlotTools.hpp  KsPlugins.cpp  KsPlugins.hpp  KsQuickContextMenu.cpp  KsQuickContextMenu.hpp  KsSearchFSM.cpp  KsSession.cpp  KsSession.hpp  KsTraceGraph.cpp  KsTraceGraph.hpp  KsTraceViewer.cpp  KsTraceViewer.hpp  KsUtils.cpp  KsUtils.hpp  KsWidgetsLib.cpp  KsWidgetsLib.hpp  kernelshark.cpp  kshark-record.cpp  libkshark-collection.c  libkshark-configio.c  libkshark-hash.c  libkshark-input.c  libkshark-input.h  libkshark-model.c  libkshark-model.h  libkshark-plot.c  (+7 more)
src/plugins/: CMakeLists.txt  ComboPlotTools.hpp  EventFieldDialog.cpp  EventFieldDialog.hpp  EventFieldPlot.cpp  KVMCombo.cpp  KVMCombo.hpp  KVMComboDialog.hpp  LatencyPlot.cpp  LatencyPlotDialog.cpp  LatencyPlotDialog.hpp  MissedEvents.cpp  SchedEvents.cpp  event_field_plot.c  event_field_plot.h  kvm_combo.c  kvm_combo.h  latency_plot.c  latency_plot.h  missed_events.c  missed_events.h  rename_sched_events.c  sched_events.c  sched_events.h
